--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,6 +3,7 @@ top_k: 5
 pool_size: 50
 ensemble_method: "rrf"
 ranker_weights: {"faiss":1,"bm25":0}
+cascade_threshold: 10.0
 rrf_k: 60
 max_gen_tokens: 400
 seg_filter: null
